styles.css
:root {

    --background:#303030;
    --backgroundcol:#D9D9D9;
    --col:white;
      --eclipse:#D3FBD8;
    --lg:linear-gradient(90deg, rgba(48, 48, 48, 1) 0%, rgba(134, 133, 239, 1) 100%);
    --thirty:#8685EF;
    --main-white: #f0f0f0;
    --main-red: #be3144;
    --main-blue: #45567d;
    --main-gray: #303841;
    --cool-black:#24272B;
    --blaack:#07070A;
    --grrey:#4A525A;
    --bluue:#004BA8;
    --bg:#24252a;
  
}
.eclipse{
    width:496px;
    height: 539px;
    position: absolute;
    z-index: -1;
    filter: blur(50px);
    border-radius: 50%;
}
#ec1{
    background-color: var(--eclipse);
    top: 20em;
    right: -25%;
    opacity: 0.5;
}
#ec2{
    background-color: white;
    top: -25%;
    left: -25%;
    opacity: 0.5;
}
*{
    box-sizing: border-box;
margin: 0;
padding: 0;
}
html{
    scroll-behavior: smooth;
    background: var(--background);
    color: var(--col);
    overflow-x: hidden;
    font-family: 'Changa', sans-serif;
scroll-padding-top: var(--scroll-padding,68px);
}
body{
    margin:0px 30px;
    margin-top: 68px;
}

img{
    max-width: 100%;
    display: inline-block;
}
a{
    text-decoration: none;
    color: inherit;
}

.navbar{
    position: fixed;    
    width: 100%;
    top:0;left:0;
    z-index: 1000;    background: #303030;
    background:linear-gradient(90deg, rgba(187, 185, 185, 1) 0%, rgba(48, 48, 48, 1) 100%);
opacity: 0.8;
background-color: #303030;
backdrop-filter: blur(100px);
    /* opacity: 0.5; */
    /* background: var(--bg); */
 display: flex;
 justify-content: flex-end;
 font-family: 'Raleway', sans-serif;
  font-weight: 900;
font-size: 1.5em;
 
box-shadow: 0 0 0 3px 3px rgba(0,0,0,0.63);
}
.navbar ul{
    display: flex;
}
.navbar li{
  
   list-style: none;
    padding:20px 10px;
/* text-transform:capitalize;  */

transition: color 1s linear 0;
}
.navbar li:hover{
color:var(--thirty) ;
/* background-color: var(--backgroundcol); */
transform: translateY(5px);
 }
#welcome-section{
    --scroll-padding:90px;
    height: 90dvh;;
    /* height:100vh;
    height: 100dvh; */
    display: grid;
grid-template-columns: repeat(6,150px);
grid-template-rows: repeat(10,20px);
justify-content: center;
    gap:1em;
    font-size: 1.7em;
    margin-top: 120px;
    margin-bottom: 60px;
}

.maskk{
    grid-column-start: 2;
position: relative;
z-index: 10;
}
#welcome-section img{
    inset: 0;
    width: auto;
    height: 23rem;
    object-fit: contain;
  }
  .color-image{
    width: auto;
    height: 23rem;
    position: absolute;
    inset: 0;
background-size:contain;
    background-image: url(colorx.png);
    background-repeat: no-repeat;
    mask-image: url(mask2.png);
    mask-size: cover;
     mask-position: 0% 0%;
    -webkit-mask-image: url(mask2.png);
    -webkit-mask-size: cover;
    -webkit-mask-position: 0% 0%;
    transition: -webkit-mask-position 1s;
  }
 
  .anim{
    animation: 
    addColor 1s steps(14) forwards;
    animation-delay: 100ms;

  }

  .mina{
    animation: 
    removeColor 1s steps(14) forwards;
    animation-delay: 100ms;
  }
  @keyframes removeColor {
    0% {
      -webkit-mask-position: 100% 0%;
      mask-position: 0% 0%;
    }
    100% {
      -webkit-mask-position: 0% 0%;
      mask-position: 1760 0%;
    }
  }
  @keyframes addColor {
    0% {
      -webkit-mask-position: 0% 0%;
      mask-position: 0 0%;
    }
    100% {
      -webkit-mask-position: 100% 0%;
      mask-position: 1760px 0%;
    }
  }
  #welcome-section h1{
    z-index: 1;

    font-family: 'Raleway', sans-serif;
        grid-area: 2 / 3 / 3 / -5;
margin: 0;
font-weight: 900;
  }
  #welcome-section p{
    transform:translate(-25%,-10px);

  }
#welcome-section p{
    grid-area: 4/3/4/-1;
        font-size:0.8em; 
       transform:translate(-25px,-10px);
       font-family: 'Raleway', sans-serif;
       font-weight: 700;
      
    }
#welcome-section span {
    margin-left: 20px;;
    font-weight: 600;
}
#welcome-section button {
    border: 1px solid var(--backgroundcol);
 color: var(--backgroundcol);background-color: var(--backgroundcol);
    border-radius: 30px;
      scale: 1.3;
      grid-area: 6/4/7/span 1;
      transform: translatex(-17px);
      
}
.colorchange{
    
    animation: colorchange  2s linear forwards;;
}
@keyframes colorchange{
    0%{
        
    }
    100%{
        color:var(--background); 
    }
}
@keyframes colorchange1{
    0%{
        
    }
    100%{
        color:var(--thirty); 
    }
}

.colorchange1{
    animation: colorchange1  2s linear forwards;

  }
  
.colorchange:hover,#btn:hover {
    background-color:var(--thirty)  ;
    color:var(--backgroundcol);
    cursor: pointer;
    transform: scale(1.3) translatex(-17px);
    z-index: 1;
}
#welcome-section a{
    width:100%;
    height:100%;
    font-family: 'Merriweather', serif;
    font-weight: 900;
}
#fell{
    transform: translateY(100px);
}
#projects{
    display: flex;
    flex-direction: column
}
section >h1{
    margin: 20px auto;
    text-align: center;
     font-size: 3em;
}
img{
    max-width: 100%;
}
.container{
    display:grid;
    grid-template-columns: repeat(3,255px);
    gap:2em;
    margin: 1em auto;
    
}
.col{
    position: relative;
    overflow: hidden;
    border: 1px solid;
    border-radius: 10%;
    background-color: var(--backgroundcol);
    width: 255px;
    height: 255px;
}
.up{
    display: none;
}
.col h1{
    font-size: 1.1rem;
    width: 100%;
    height: 74px;
    position:absolute;
    bottom: 0;
    text-align: center;
padding:20px;
background-color:var(--thirty);
}
.col:hover .up{
    display: inline-block;
    position:absolute;
    z-index: 1000;
   font-size: 0.8rem;

margin: 70px 20px 0 20px;
}
.col:hover h1{
    height: 255px;
    opacity: 0.9;
}
#link{
    height:100dvh;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    --scroll-padding:0;
    gap:1em;
}
.flex{
    font-size: 1.5em;
    display: flex;
    gap:3em;
    justify-content: center;
}
#link >h1{
   
    text-transform: uppercase;letter-spacing: 1px;
    color: var(--thirty);
}
#link a:hover{
   
    color:var(--thirty);
        /* background-color: var(--backgroundcol); */
        transform: translateY(10px);
    
}
.menu{
    display:none;
}
.inblockk {
    color:var(--thirty);
    transform: translateY(10px);
}
@media only screen and (max-width: 600px){

    html{
       
        scroll-padding-top: var(--scroll-padding,0px);

    }
    .menu{
        fill: #D3FBD8;
        background: none;
        border: 0;
        top:0;
        display: block;
        position:fixed;
        z-index:9999;
    }
    .navbar{
        display:none;
        z-index: 1000;
    }
    header .nvb{
        display: block;

    } 
    header>.navbar .ulce{
                flex-direction: column;
                margin:auto;
                text-align: center;
                align-items: center;
    }
  

    body{
        margin:0;
    }
    #welcome-section{
        grid-template-columns: 1fr;
grid-template-rows: 120px ; 
justify-content: center;
margin-bottom:120px;
margin-top: 70px;
}
p#para{
    visibility: hidden;
    position: absolute;
}
.colorchange{
    transform: translateX(100px);
    background-color: #be3144;
}
.container {
    grid-template-columns: 1fr;
}
.flex{
    flex-direction: column;
}
button#btn {
    grid-area: 1/1/2/2;
    height:2em;
    width:70%;
    transform: translate(50px,70px);
}
.colorchange:hover,#btn:hover {
    transform:scale(1.3)translate(30px,60px);
}
}

